<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_weight="1"
    android:background="@color/screenBackground2"
    tools:context=".AddActivity"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/textview_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Add Class"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textview_class_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Class Title"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textview_add" />

    <EditText
        android:id="@+id/class_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        app:layout_constraintStart_toEndOf="@id/textview_class_title"
        app:layout_constraintTop_toBottomOf="@+id/textview_add"/>

    <TextView
        android:id="@+id/textview_instructor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Instructor"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/class_title" />
    <EditText
        android:id="@+id/instructor_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        app:layout_constraintStart_toEndOf="@id/textview_instructor"
        app:layout_constraintTop_toBottomOf="@+id/class_title" />
    <TextView
        android:id="@+id/textview_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Location: "
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/instructor_name" />
    <EditText
        android:id="@+id/location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        app:layout_constraintStart_toEndOf="@id/textview_location"
        app:layout_constraintTop_toBottomOf="@+id/instructor_name" />

    <Button
        android:id="@+id/timePickerButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="popTimePicker"
        android:text="Select Time"
        />

    <TextView
        android:id="@+id/textview_repeats"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Repeats Every:"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTime" />


    <LinearLayout
        android:id="@+id/repeats_days"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/textview_repeats"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:orientation="horizontal">
        <CheckBox
            android:id="@+id/sunday_checked"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sunday"/>
        <CheckBox
            android:id="@+id/monday_checked"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/monday"/>
        <CheckBox
            android:id="@+id/tuesday_checked"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tuesday"/>
        <CheckBox
            android:id="@+id/wednesday_checked"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wednesday"/>
        <CheckBox
            android:id="@+id/thursday_checked"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/thursday"/>
        <CheckBox
            android:id="@+id/friday_checked"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/friday"/>
        <CheckBox
            android:id="@+id/saturday_checked"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/saturday"/>
    </LinearLayout>
    <TextView
        android:id="@+id/textview_descript"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Description:"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/repeats_days" />
    <EditText
        android:id="@+id/descript"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:inputType="textMultiLine"
        android:lines="8"
        android:maxLines="10"
        android:minLines="6"
        android:scrollbars="vertical"
        android:hint="Describe the class."
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textview_descript" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="Add Class"
        android:onClick="saveClassAction"
        app:layout_constraintTop_toBottomOf="@id/descript"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</LinearLayout>